--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Better-days-or-A-Millionaire-of-To-morrow_67835
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67835-h/images/cover.jpg
 creator:
   authors:
   - agent_name: Fitch, Thomas
@@ -17,6 +20,8 @@ creator:
     gutenberg_agent_id: '54484'
     url: http://www.gutenberg.org/2009/agents/54484
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67835#Better-days-or-A-Millionaire-of-To-morrow
 gutenberg_issued: '2022-04-15'
 identifiers:
   gutenberg: '67835'
